<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.alosir.task.ui.fragment.TodayFragment"
        android:label="@string/nav_today"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.alosir.task.ui.fragment.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.alosir.task.ui.fragment.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.alosir.task.ui.fragment.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
