<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_task_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_website_url"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/packageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_app_package"
        android:enabled="false"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_task_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:maxLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.alosir.task.ui.view.CyclePickerView
        android:id="@+id/cyclePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/checkEnableReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reminder_time_hint" />

    <com.alosir.task.ui.view.TimePickerView
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

</LinearLayout>
